syntax = "proto3";
package tutorial; // todo rename and re gen to be different package

import "google/protobuf/empty.proto";

option go_package = "github.com/lcmaguire/protoc-gen-go-goo/exampleconnect/sample";

// todo make AIP approved
service ExampleService {
    rpc CreateExample(SearchRequest) returns (SearchResponse);
    rpc GetExample(SearchRequest) returns (SearchResponse);
    rpc ListExamples(SearchRequest) returns (SearchResponse);
    rpc UpdateExample(SearchRequest) returns (SearchResponse);
    rpc DeleteExample(SearchRequest) returns (google.protobuf.Empty);
}

message SearchRequest {
    string name = 1;
    string display_name = 2;
}

message SearchResponse {
    string name = 1;
}

service StreamingService {
    rpc ClientStream(stream GreetRequest) returns (GreetResponse) {}
    rpc ResponseStream(GreetRequest) returns (stream GreetResponse) {}
    rpc BiDirectionalStream(stream GreetRequest) returns (stream GreetResponse) {}
}

message GreetRequest {
    string name = 1;
}
  
message GreetResponse {
    string greeting = 1;
}
